# OpenAIcoop

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_ANALYSIS_REPORT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PR_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  analysis_report.txt  analyze_behavior_modes.py  analyze_telemetry.py  backup  debug_check_group.txt  main.py  movement_log.txt  pyproject.toml  reproduce_test.py  requirements-dev.txt  requirements.txt  telemetry_report.txt  test_output.txt  verify_log.txt  verify_movement_and_behavior.py  verify_output.txt  verify_refactor.py
.github/workflows/: ci.yml
configs/: default.yaml
creature_templates/: sample.json
docs/: ALIEN_OCEAN_DESIGN.md  BIOMASS_AND_BITING.md  BUOYANCY_FIX.md  BUOYANCY_INSPECTOR_UI.md  CREATURE_CREATOR.md  DECOMPOSITION_WOUND_SYSTEM.md  JELLYFISH_BODY_PLANS.md  MARINE_BASE_FORMS.md  MODULAR_BODY_MIGRATION.md  MODULE_NUTRITION_PLAN.md  PERFORMANCE.md  PERFORMANCE_SUMMARY.md  PHASE2_STATUS.md  SWIMMING_FIX.md  evolution_design.md  ocean_world_design.md
evolution/: __init__.py  debug_import.py  events.py  notifications.py  player.py  settings.py  simulation.py  verify_movement.py  world.py
evolution/body/: __init__.py  attachment.py  body_graph.py  modules.py
evolution/config/: __init__.py  constants.py  settings.py
evolution/creator/: __init__.py  spawning.py  storage.py  survivability.py  templates.py
evolution/dna/: __init__.py  base_forms.py  blueprints.py  development.py  factory.py  genes.py  mutation.py  profiles.py  selection.py
evolution/entities/: __init__.py  ai.py  combat.py  feeding.py  lifeform.py  locomotion.py  movement.py  movement_patterns.py  neural_controller.py  pheromone_trail.py  pheromones.py  reproduction.py
evolution/morphology/: __init__.py  genotype.py  phenotype.py
evolution/physics/: __init__.py  controllers.py  physics_body.py  test_creatures.py  vector_math.py
evolution/rendering/: __init__.py  camera.py  conditions.py  creature_creator_overlay.py  draw_hud.py  draw_lifeform.py  draw_world.py  effects.py  gameplay_panel.py  lifeform_inspector.py  modular_lifeform_renderer.py  modular_palette.py  modular_renderer.py  ocean_renderer.py  perf_hud.py  sprite_cache.py  stats_window.py  timers.py  tools_panel.py  window_chrome.py
evolution/simulation/: __init__.py  base_population.py  bootstrap.py  engine.py  environment.py  loop.py  state.py  time.py
evolution/simulation/world/: __init__.py  chunks.py
evolution/systems/: __init__.py  events.py  notifications.py  player.py  spatial_hash.py  stats.py  telemetry.py
evolution/utils/: math_utils.py
evolution/world/: __init__.py  advanced_carcass.py  biomes.py  carcass.py  map_generator.py  moss_dna.py  obstacles.py  ocean_physics.py  ocean_world.py  organic.py  seaweed.py  types.py  vegetation.py  world.py  world_old.py
tests/: dna_helpers.py  test_body_graph_layout.py  test_buoyancy_compensation.py  test_buoyancy_fix.py  test_carcass_consumption.py  test_config_runtime.py  test_decomposition.py  test_depth_darkening.py  test_dna_blueprints.py  test_dna_factory.py  test_dna_mutation.py  test_hunting_behavior.py  test_lifeform_buoyancy.py  test_lifeform_speed.py  test_module_nutrition.py  test_module_viewer.py  test_ocean_physics.py  test_spatial_hash.py  test_swimming_thrust.py
tools/: QUICKSTART.md  README.md  __init__.py  module_viewer.py
